# winston

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: __init__.py  homelab.py  ollama.py
homelab_brain/: __init__.py  brain.py  cli.py  history.py  models.py  motd_summary.py  ollama_client.py  system_context.py
tests/: __init__.py  test_brain.py  test_wakeonlan.py
